fixed buttons text alignment

--- a/frontend/src/styles/basics/_buttons.scss
+++ b/frontend/src/styles/basics/_buttons.scss
@@ -8,6 +8,7 @@
   font-family: "$Montserrat-Bold";
   font-weight: bold;
   outline: none;
+  line-height: 1;
 }
 
 @mixin btnActionColorSm() {
@@ -22,6 +23,7 @@
   font-weight: bold;
   font-size: rem(12px);
   outline: none;
+  line-height: 1;
 }
 
 @mixin btnAction() {
@@ -35,6 +37,7 @@
   font-family: $Montserrat-Bold;
   font-weight: bold;
   outline: none;
+  line-height: 1;
 }
 
 @mixin btnActionSm() {
@@ -49,6 +52,7 @@
   font-weight: bold;
   font-size: rem(12px);
   outline: none;
+  line-height: 1;
 }
 
 
@@ -64,6 +68,7 @@
   outline: none;
   color: $tpGray3;
   border: 1px solid $tpGray3;
+  line-height: 1;
 }
 
 @mixin btnActionGreySm() {
@@ -79,6 +84,7 @@
   outline: none;
   color: $tpGray3;
   border: 1px solid $tpGray3;
+  line-height: 1;
 }
 
 @mixin btnActionWhite() {
@@ -93,6 +99,7 @@
   outline: none;
   color: $tpWhite;
   border: 1px solid $tpWhite;
+  line-height: 1;
 }
 
 @mixin btnActionWhiteSm() {
@@ -107,10 +114,12 @@
   outline: none;
   color: $tpWhite;
   border: 1px solid $tpWhite;
+  line-height: 1;
 } 
 @mixin btnRound($size) {
   border-radius: 50%;
   width: $size;
   height: $size;
   border: 0;
+  line-height: 1;
 }
